--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/node": "^18.7.18",
-    "prettier": "^2.7.1",
     "typescript": "^4.8.3"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "commander": "^9.4.0",
-    "csv-parse": "^5.3.0",
     "csv-parser": "^3.0.0",
-    "file-type": "^18.0.0",
     "moment": "^2.29.4"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "postinstall": "yarn build"
   }
 }
